Answering 3rd question

--- a/Specializations/Machine Learning/Classification/Week 2/module-3-linear-classifier-learning-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 2/module-3-linear-classifier-learning-assignment-blank.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2016-03-15 22:57:27,707 [INFO] graphlab.cython.cy_server, 176: GraphLab Create v1.8.5 started. Logging: /tmp/graphlab_server_1458079045.log\n"
+      "2016-03-17 23:30:12,949 [INFO] graphlab.cython.cy_server, 176: GraphLab Create v1.8.5 started. Logging: /tmp/graphlab_server_1458253811.log\n"
      ]
     }
    ],
@@ -489,19 +489,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "produces probablistic estimate for P(y_i = +1 | x_i, w).\n",
@@ -588,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -637,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -645,7 +637,7 @@
    "source": [
     "def feature_derivative(errors, feature):     \n",
     "    # Compute the dot product of errors and feature\n",
-    "    derivative = ...\n",
+    "    derivative = sum(feature * errors)\n",
     "    \n",
     "    # Return the derivative\n",
     "    return derivative"
@@ -666,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -696,11 +688,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The following outputs must match \n",
+      "------------------------------------------------\n",
+      "correct_log_likelihood           = -5.33141161544\n",
+      "output of compute_log_likelihood = -5.33141161544\n"
+     ]
+    }
+   ],
    "source": [
     "dummy_feature_matrix = np.array([[1.,2.,3.], [1.,-1.,-1]])\n",
     "dummy_coefficients = np.array([1., 3., -1.])\n",
@@ -737,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -750,8 +753,7 @@
     "    for itr in xrange(max_iter):\n",
     "\n",
     "        # Predict P(y_i = +1|x_i,w) using your predict_probability() function\n",
-    "        # YOUR CODE HERE\n",
-    "        predictions = ...\n",
+    "        predictions = predict_probability(feature_matrix, coefficients)\n",
     "        \n",
     "        # Compute indicator value for (y_i = +1)\n",
     "        indicator = (sentiment==+1)\n",
@@ -762,12 +764,10 @@
     "            \n",
     "            # Recall that feature_matrix[:,j] is the feature column associated with coefficients[j].\n",
     "            # Compute the derivative for coefficients[j]. Save it in a variable called derivative\n",
-    "            # YOUR CODE HERE\n",
-    "            derivative = ...\n",
+    "            derivative = feature_derivative(errors, feature_matrix[:,j])\n",
     "            \n",
     "            # add the step size times the derivative to the current coefficient\n",
-    "            ## YOUR CODE HERE\n",
-    "            ...\n",
+    "            coefficients[j] = coefficients[j] + (step_size * derivative)\n",
     "        \n",
     "        # Checking whether log likelihood is increasing\n",
     "        if itr <= 15 or (itr <= 100 and itr % 10 == 0) or (itr <= 1000 and itr % 100 == 0) \\\n",
@@ -787,11 +787,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iteration   0: log likelihood of observed labels = -36780.91768478\n",
+      "iteration   1: log likelihood of observed labels = -36775.13434712\n",
+      "iteration   2: log likelihood of observed labels = -36769.35713564\n",
+      "iteration   3: log likelihood of observed labels = -36763.58603240\n",
+      "iteration   4: log likelihood of observed labels = -36757.82101962\n",
+      "iteration   5: log likelihood of observed labels = -36752.06207964\n",
+      "iteration   6: log likelihood of observed labels = -36746.30919497\n",
+      "iteration   7: log likelihood of observed labels = -36740.56234821\n",
+      "iteration   8: log likelihood of observed labels = -36734.82152213\n",
+      "iteration   9: log likelihood of observed labels = -36729.08669961\n",
+      "iteration  10: log likelihood of observed labels = -36723.35786366\n",
+      "iteration  11: log likelihood of observed labels = -36717.63499744\n",
+      "iteration  12: log likelihood of observed labels = -36711.91808422\n",
+      "iteration  13: log likelihood of observed labels = -36706.20710739\n",
+      "iteration  14: log likelihood of observed labels = -36700.50205049\n",
+      "iteration  15: log likelihood of observed labels = -36694.80289716\n",
+      "iteration  20: log likelihood of observed labels = -36666.39512033\n",
+      "iteration  30: log likelihood of observed labels = -36610.01327118\n",
+      "iteration  40: log likelihood of observed labels = -36554.19728365\n",
+      "iteration  50: log likelihood of observed labels = -36498.93316099\n",
+      "iteration  60: log likelihood of observed labels = -36444.20783914\n",
+      "iteration  70: log likelihood of observed labels = -36390.00909449\n",
+      "iteration  80: log likelihood of observed labels = -36336.32546144\n",
+      "iteration  90: log likelihood of observed labels = -36283.14615871\n",
+      "iteration 100: log likelihood of observed labels = -36230.46102347\n",
+      "iteration 200: log likelihood of observed labels = -35728.89418769\n",
+      "iteration 300: log likelihood of observed labels = -35268.51212683\n"
+     ]
+    }
+   ],
    "source": [
     "coefficients = logistic_regression(feature_matrix, sentiment, initial_coefficients=np.zeros(194),\n",
     "                                   step_size=1e-7, max_iter=301)"
@@ -835,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -854,12 +888,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "positives = scores > 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -870,12 +906,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25126"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(positives[positives == True])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -894,20 +943,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-----------------------------------------------------\n",
+      "# Reviews   correctly classified = 50252\n",
+      "# Reviews incorrectly classified = 2820\n",
+      "# Reviews total                  = 53072\n",
+      "-----------------------------------------------------\n",
+      "Accuracy = 0.00\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.475052758516732"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num_mistakes = ... # YOUR CODE HERE\n",
-    "accuracy = ... # YOUR CODE HERE\n",
+    "negatives = scores <= 0\n",
+    "num_mistakes =  np.abs(len(products[products['sentiment'] == 1]) - len(positives[positives == True])) + np.abs(len(products[products['sentiment'] == -1]) - len(negatives[negatives == False]))\n",
+    "accuracy = (len(products) - num_mistakes) / len(products)\n",
     "print \"-----------------------------------------------------\"\n",
     "print '# Reviews   correctly classified =', len(products) - num_mistakes\n",
     "print '# Reviews incorrectly classified =', num_mistakes\n",
     "print '# Reviews total                  =', len(products)\n",
     "print \"-----------------------------------------------------\"\n",
-    "print 'Accuracy = %.2f' % accuracy"
+    "print 'Accuracy = %.2f' % accuracy\n",
+    "25212.0 / 53072.0"
    ]
   },
   {
