--- a/Specializations/Machine Learning/Classification/Week 2/module-3-linear-classifier-learning-assignment-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 2/module-3-linear-classifier-learning-assignment-blank.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2016-03-17 23:30:12,949 [INFO] graphlab.cython.cy_server, 176: GraphLab Create v1.8.5 started. Logging: /tmp/graphlab_server_1458253811.log\n"
+      "2016-03-19 00:51:12,429 [INFO] graphlab.cython.cy_server, 176: GraphLab Create v1.8.5 started. Logging: /tmp/graphlab_server_1458345070.log\n"
      ]
     }
    ],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -410,22 +410,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(53072, 194)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "feature_matrix.shape"
    ]
@@ -448,22 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1,  1,  1, ..., -1, -1, -1])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sentiment"
    ]
@@ -489,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -580,22 +558,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The following outputs must match \n",
-      "------------------------------------------------\n",
-      "correct_predictions           = [ 0.98201379  0.26894142]\n",
-      "output of predict_probability = [ 0.98201379  0.26894142]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dummy_feature_matrix = np.array([[1.,2.,3.], [1.,-1.,-1]])\n",
     "dummy_coefficients = np.array([1., 3., -1.])\n",
@@ -629,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -658,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -688,22 +655,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The following outputs must match \n",
-      "------------------------------------------------\n",
-      "correct_log_likelihood           = -5.33141161544\n",
-      "output of compute_log_likelihood = -5.33141161544\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dummy_feature_matrix = np.array([[1.,2.,3.], [1.,-1.,-1]])\n",
     "dummy_coefficients = np.array([1., 3., -1.])\n",
@@ -740,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -787,45 +743,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iteration   0: log likelihood of observed labels = -36780.91768478\n",
-      "iteration   1: log likelihood of observed labels = -36775.13434712\n",
-      "iteration   2: log likelihood of observed labels = -36769.35713564\n",
-      "iteration   3: log likelihood of observed labels = -36763.58603240\n",
-      "iteration   4: log likelihood of observed labels = -36757.82101962\n",
-      "iteration   5: log likelihood of observed labels = -36752.06207964\n",
-      "iteration   6: log likelihood of observed labels = -36746.30919497\n",
-      "iteration   7: log likelihood of observed labels = -36740.56234821\n",
-      "iteration   8: log likelihood of observed labels = -36734.82152213\n",
-      "iteration   9: log likelihood of observed labels = -36729.08669961\n",
-      "iteration  10: log likelihood of observed labels = -36723.35786366\n",
-      "iteration  11: log likelihood of observed labels = -36717.63499744\n",
-      "iteration  12: log likelihood of observed labels = -36711.91808422\n",
-      "iteration  13: log likelihood of observed labels = -36706.20710739\n",
-      "iteration  14: log likelihood of observed labels = -36700.50205049\n",
-      "iteration  15: log likelihood of observed labels = -36694.80289716\n",
-      "iteration  20: log likelihood of observed labels = -36666.39512033\n",
-      "iteration  30: log likelihood of observed labels = -36610.01327118\n",
-      "iteration  40: log likelihood of observed labels = -36554.19728365\n",
-      "iteration  50: log likelihood of observed labels = -36498.93316099\n",
-      "iteration  60: log likelihood of observed labels = -36444.20783914\n",
-      "iteration  70: log likelihood of observed labels = -36390.00909449\n",
-      "iteration  80: log likelihood of observed labels = -36336.32546144\n",
-      "iteration  90: log likelihood of observed labels = -36283.14615871\n",
-      "iteration 100: log likelihood of observed labels = -36230.46102347\n",
-      "iteration 200: log likelihood of observed labels = -35728.89418769\n",
-      "iteration 300: log likelihood of observed labels = -35268.51212683\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "coefficients = logistic_regression(feature_matrix, sentiment, initial_coefficients=np.zeros(194),\n",
     "                                   step_size=1e-7, max_iter=301)"
@@ -869,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -888,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -906,22 +828,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25126"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(positives[positives == True])"
    ]
@@ -943,45 +854,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-----------------------------------------------------\n",
-      "# Reviews   correctly classified = 50252\n",
-      "# Reviews incorrectly classified = 2820\n",
-      "# Reviews total                  = 53072\n",
-      "-----------------------------------------------------\n",
-      "Accuracy = 0.00\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.475052758516732"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "negatives = scores <= 0\n",
-    "num_mistakes =  np.abs(len(products[products['sentiment'] == 1]) - len(positives[positives == True])) + np.abs(len(products[products['sentiment'] == -1]) - len(negatives[negatives == False]))\n",
-    "accuracy = (len(products) - num_mistakes) / len(products)\n",
+    "num_mistakes =  (sentiment != predictions).sum()\n",
+    "accuracy = 1. * (len(products) - num_mistakes) / len(products)\n",
     "print \"-----------------------------------------------------\"\n",
     "print '# Reviews   correctly classified =', len(products) - num_mistakes\n",
     "print '# Reviews incorrectly classified =', num_mistakes\n",
     "print '# Reviews total                  =', len(products)\n",
     "print \"-----------------------------------------------------\"\n",
-    "print 'Accuracy = %.2f' % accuracy\n",
-    "25212.0 / 53072.0"
+    "print 'Accuracy = %.2f' % accuracy"
    ]
   },
   {
@@ -1044,7 +931,9 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "word_coefficient_tuples"
+   ]
   },
   {
    "cell_type": "markdown",
