Calculating the percentage of safe and risky loans

--- a/Specializations/Machine Learning/Classification/Week 3/Assignment 1/module-5-decision-tree-assignment-1-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 3/Assignment 1/module-5-decision-tree-assignment-1-blank.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -70,11 +70,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This non-commercial license of GraphLab Create is assigned to thomasv1000@hotmail.fr and will expire on October 12, 2016. For commercial licensing options, visit https://dato.com/buy/.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2016-03-22 14:42:25,134 [INFO] graphlab.cython.cy_server, 176: GraphLab Create v1.8.5 started. Logging: /tmp/graphlab_server_1458654142.log\n"
+     ]
+    }
+   ],
    "source": [
     "loans = graphlab.SFrame('lending-club-data.gl/')"
    ]
@@ -90,11 +105,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['id',\n",
+       " 'member_id',\n",
+       " 'loan_amnt',\n",
+       " 'funded_amnt',\n",
+       " 'funded_amnt_inv',\n",
+       " 'term',\n",
+       " 'int_rate',\n",
+       " 'installment',\n",
+       " 'grade',\n",
+       " 'sub_grade',\n",
+       " 'emp_title',\n",
+       " 'emp_length',\n",
+       " 'home_ownership',\n",
+       " 'annual_inc',\n",
+       " 'is_inc_v',\n",
+       " 'issue_d',\n",
+       " 'loan_status',\n",
+       " 'pymnt_plan',\n",
+       " 'url',\n",
+       " 'desc',\n",
+       " 'purpose',\n",
+       " 'title',\n",
+       " 'zip_code',\n",
+       " 'addr_state',\n",
+       " 'dti',\n",
+       " 'delinq_2yrs',\n",
+       " 'earliest_cr_line',\n",
+       " 'inq_last_6mths',\n",
+       " 'mths_since_last_delinq',\n",
+       " 'mths_since_last_record',\n",
+       " 'open_acc',\n",
+       " 'pub_rec',\n",
+       " 'revol_bal',\n",
+       " 'revol_util',\n",
+       " 'total_acc',\n",
+       " 'initial_list_status',\n",
+       " 'out_prncp',\n",
+       " 'out_prncp_inv',\n",
+       " 'total_pymnt',\n",
+       " 'total_pymnt_inv',\n",
+       " 'total_rec_prncp',\n",
+       " 'total_rec_int',\n",
+       " 'total_rec_late_fee',\n",
+       " 'recoveries',\n",
+       " 'collection_recovery_fee',\n",
+       " 'last_pymnt_d',\n",
+       " 'last_pymnt_amnt',\n",
+       " 'next_pymnt_d',\n",
+       " 'last_credit_pull_d',\n",
+       " 'collections_12_mths_ex_med',\n",
+       " 'mths_since_last_major_derog',\n",
+       " 'policy_code',\n",
+       " 'not_compliant',\n",
+       " 'status',\n",
+       " 'inactive_loans',\n",
+       " 'bad_loans',\n",
+       " 'emp_length_num',\n",
+       " 'grade_num',\n",
+       " 'sub_grade_num',\n",
+       " 'delinq_2yrs_zero',\n",
+       " 'pub_rec_zero',\n",
+       " 'collections_12_mths_zero',\n",
+       " 'short_emp',\n",
+       " 'payment_inc_ratio',\n",
+       " 'final_d',\n",
+       " 'last_delinq_none',\n",
+       " 'last_record_none',\n",
+       " 'last_major_derog_none']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "loans.column_names()"
    ]
@@ -108,11 +201,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css\"\n",
+       "}));\n",
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//dato.com/files/canvas/1.8.5/css/canvas.css\"\n",
+       "}));\n",
+       "\n",
+       "            (function(){\n",
+       "\n",
+       "                var e = null;\n",
+       "                if (typeof element == 'undefined') {\n",
+       "                    var scripts = document.getElementsByTagName('script');\n",
+       "                    var thisScriptTag = scripts[scripts.length-1];\n",
+       "                    var parentDiv = thisScriptTag.parentNode;\n",
+       "                    e = document.createElement('div');\n",
+       "                    parentDiv.appendChild(e);\n",
+       "                } else {\n",
+       "                    e = element[0];\n",
+       "                }\n",
+       "\n",
+       "                if (typeof requirejs !== 'undefined') {\n",
+       "                    // disable load timeout; ipython_app.js is large and can take a while to load.\n",
+       "                    requirejs.config({waitSeconds: 0});\n",
+       "                }\n",
+       "\n",
+       "                require(['//dato.com/files/canvas/1.8.5/js/ipython_app.js'], function(IPythonApp){\n",
+       "                    var app = new IPythonApp();\n",
+       "                    app.attachView('sarray','Categorical', {\"ipython\": true, \"sketch\": {\"complete\": true, \"numeric\": false, \"num_unique\": 7, \"num_undefined\": 0, \"progress\": 1.0, \"frequent_items\": {\"A\": {\"frequency\": 22314, \"value\": \"A\"}, \"C\": {\"frequency\": 29950, \"value\": \"C\"}, \"B\": {\"frequency\": 37172, \"value\": \"B\"}, \"E\": {\"frequency\": 8990, \"value\": \"E\"}, \"D\": {\"frequency\": 19175, \"value\": \"D\"}, \"G\": {\"frequency\": 1074, \"value\": \"G\"}, \"F\": {\"frequency\": 3932, \"value\": \"F\"}}, \"size\": 122607}, \"selected_variable\": {\"name\": [\"<SArray>\"], \"dtype\": \"str\", \"view_component\": \"Categorical\", \"view_file\": \"sarray\", \"descriptives\": {\"rows\": 122607}, \"type\": \"SArray\", \"view_components\": [\"Categorical\"]}, \"histogram\": null}, e);\n",
+       "                });\n",
+       "            })();\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "loans['grade'].show()"
    ]
@@ -128,11 +265,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css\"\n",
+       "}));\n",
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//dato.com/files/canvas/1.8.5/css/canvas.css\"\n",
+       "}));\n",
+       "\n",
+       "            (function(){\n",
+       "\n",
+       "                var e = null;\n",
+       "                if (typeof element == 'undefined') {\n",
+       "                    var scripts = document.getElementsByTagName('script');\n",
+       "                    var thisScriptTag = scripts[scripts.length-1];\n",
+       "                    var parentDiv = thisScriptTag.parentNode;\n",
+       "                    e = document.createElement('div');\n",
+       "                    parentDiv.appendChild(e);\n",
+       "                } else {\n",
+       "                    e = element[0];\n",
+       "                }\n",
+       "\n",
+       "                if (typeof requirejs !== 'undefined') {\n",
+       "                    // disable load timeout; ipython_app.js is large and can take a while to load.\n",
+       "                    requirejs.config({waitSeconds: 0});\n",
+       "                }\n",
+       "\n",
+       "                require(['//dato.com/files/canvas/1.8.5/js/ipython_app.js'], function(IPythonApp){\n",
+       "                    var app = new IPythonApp();\n",
+       "                    app.attachView('sarray','Categorical', {\"ipython\": true, \"sketch\": {\"complete\": true, \"numeric\": false, \"num_unique\": 4, \"num_undefined\": 0, \"progress\": 1.0, \"frequent_items\": {\"OWN\": {\"frequency\": 9943, \"value\": \"OWN\"}, \"OTHER\": {\"frequency\": 179, \"value\": \"OTHER\"}, \"RENT\": {\"frequency\": 53245, \"value\": \"RENT\"}, \"MORTGAGE\": {\"frequency\": 59240, \"value\": \"MORTGAGE\"}}, \"size\": 122607}, \"selected_variable\": {\"name\": [\"<SArray>\"], \"dtype\": \"str\", \"view_component\": \"Categorical\", \"view_file\": \"sarray\", \"descriptives\": {\"rows\": 122607}, \"type\": \"SArray\", \"view_components\": [\"Categorical\"]}, \"histogram\": null}, e);\n",
+       "                });\n",
+       "            })();\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "loans['home_ownership'].show()"
    ]
@@ -161,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -182,11 +363,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css\"\n",
+       "}));\n",
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//dato.com/files/canvas/1.8.5/css/canvas.css\"\n",
+       "}));\n",
+       "\n",
+       "            (function(){\n",
+       "\n",
+       "                var e = null;\n",
+       "                if (typeof element == 'undefined') {\n",
+       "                    var scripts = document.getElementsByTagName('script');\n",
+       "                    var thisScriptTag = scripts[scripts.length-1];\n",
+       "                    var parentDiv = thisScriptTag.parentNode;\n",
+       "                    e = document.createElement('div');\n",
+       "                    parentDiv.appendChild(e);\n",
+       "                } else {\n",
+       "                    e = element[0];\n",
+       "                }\n",
+       "\n",
+       "                if (typeof requirejs !== 'undefined') {\n",
+       "                    // disable load timeout; ipython_app.js is large and can take a while to load.\n",
+       "                    requirejs.config({waitSeconds: 0});\n",
+       "                }\n",
+       "\n",
+       "                require(['//dato.com/files/canvas/1.8.5/js/ipython_app.js'], function(IPythonApp){\n",
+       "                    var app = new IPythonApp();\n",
+       "                    app.attachView('sarray','Categorical', {\"ipython\": true, \"sketch\": {\"std\": 0.7827226562473065, \"complete\": true, \"min\": -1.0, \"max\": 1.0, \"quantile\": [-1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, -1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0], \"median\": 1.0, \"numeric\": true, \"num_unique\": 2, \"num_undefined\": 0, \"var\": 0.6126547566028392, \"progress\": 1.0, \"size\": 122607, \"frequent_items\": {\"1\": {\"frequency\": 99457, \"value\": 1}, \"-1\": {\"frequency\": 23150, \"value\": -1}}, \"mean\": 0.6223706639914529}, \"selected_variable\": {\"name\": [\"<SArray>\"], \"dtype\": \"int\", \"view_component\": \"Categorical\", \"view_file\": \"sarray\", \"descriptives\": {\"rows\": 122607}, \"type\": \"SArray\", \"view_components\": [\"Numeric\", \"Categorical\"]}, \"histogram\": {\"progress\": 1.0, \"histogram\": {\"max\": 1.0, \"bins\": [23150, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 99457], \"min\": -1.0}, \"min\": -1, \"complete\": 1, \"max\": 1}}, e);\n",
+       "                });\n",
+       "            })();\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "loans['safe_loans'].show(view = 'Categorical')"
    ]
@@ -218,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -262,11 +487,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of safe loans  : 99457\n",
+      "Number of risky loans : 23150\n"
+     ]
+    }
+   ],
    "source": [
     "safe_loans_raw = loans[loans[target] == +1]\n",
     "risky_loans_raw = loans[loans[target] == -1]\n",
@@ -283,14 +517,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of safe loans  :  0\n",
+      "Percentage of risky loans :  0\n"
+     ]
+    }
+   ],
    "source": [
-    "print \"Percentage of safe loans  :\", \n",
-    "print \"Percentage of risky loans :\", "
+    "print \"Percentage of safe loans  : \", (len(safe_loans_raw) / (len(safe_loans_raw) + len(risky_loans_raw)) )\n",
+    "print \"Percentage of risky loans : \", (len(risky_loans_raw) / (len(safe_loans_raw) + len(risky_loans_raw)))"
    ]
   },
   {
@@ -843,7 +1086,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
