Answer to question 2 for assignment 1 of classification week 3

--- a/Specializations/Machine Learning/Classification/Week 3/Assignment 1/module-5-decision-tree-assignment-1-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 3/Assignment 1/module-5-decision-tree-assignment-1-blank.ipynb
@@ -1247,12 +1247,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype: float\n",
+       "Rows: 4\n",
+       "[0.5473502278327942, 0.4891221821308136, 0.4559234082698822, 0.5864479541778564]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "decision_tree_model.predict(sample_validation_data, output_type='probability')"
+   ]
   },
   {
    "cell_type": "markdown",
