Try to answer the third question of assignment 1 for classification week 3

--- a/Specializations/Machine Learning/Classification/Week 3/Assignment 1/module-5-decision-tree-assignment-1-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 3/Assignment 1/module-5-decision-tree-assignment-1-blank.ipynb
@@ -1291,18 +1291,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype: float\n",
+       "Rows: 4\n",
+       "[0.5242817997932434, 0.47226759791374207, 0.47226759791374207, 0.5798847675323486]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_model.predict(sample_validation_data, output_type='probability')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Quiz Question:** Notice that the probability preditions are the **exact same** for the 2nd and 3rd loans. Why would this happen?"
+    "**Quiz Question:** Notice that the probability preditions are the **exact same** for the 2nd and 3rd loans. Why would this happen?\n",
+    "\n",
+    "**Answer:** Because the length of the tree was limited to two levels and the grades are the same"
    ]
   },
   {
