Answer to question 4 of assignment 1 of classification week 3

--- a/Specializations/Machine Learning/Classification/Week 3/Assignment 1/module-5-decision-tree-assignment-1-blank.ipynb
+++ b/Specializations/Machine Learning/Classification/Week 3/Assignment 1/module-5-decision-tree-assignment-1-blank.ipynb
@@ -1334,11 +1334,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dti': 16.85,\n",
+       " 'emp_length_num': 10,\n",
+       " 'grade': 'D',\n",
+       " 'home_ownership': 'RENT',\n",
+       " 'last_delinq_none': 1,\n",
+       " 'last_major_derog_none': 1,\n",
+       " 'purpose': 'debt_consolidation',\n",
+       " 'revol_util': 96.4,\n",
+       " 'safe_loans': 1,\n",
+       " 'short_emp': 0,\n",
+       " 'sub_grade': 'D1',\n",
+       " 'term': ' 36 months',\n",
+       " 'total_rec_late_fee': 0.0}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sample_validation_data[1]"
    ]
@@ -1352,11 +1375,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css\"\n",
+       "}));\n",
+       "$(\"head\").append($(\"<link/>\").attr({\n",
+       "  rel:  \"stylesheet\",\n",
+       "  type: \"text/css\",\n",
+       "  href: \"//dato.com/files/canvas/1.8.5/css/canvas.css\"\n",
+       "}));\n",
+       "\n",
+       "            (function(){\n",
+       "\n",
+       "                var e = null;\n",
+       "                if (typeof element == 'undefined') {\n",
+       "                    var scripts = document.getElementsByTagName('script');\n",
+       "                    var thisScriptTag = scripts[scripts.length-1];\n",
+       "                    var parentDiv = thisScriptTag.parentNode;\n",
+       "                    e = document.createElement('div');\n",
+       "                    parentDiv.appendChild(e);\n",
+       "                } else {\n",
+       "                    e = element[0];\n",
+       "                }\n",
+       "\n",
+       "                if (typeof requirejs !== 'undefined') {\n",
+       "                    // disable load timeout; ipython_app.js is large and can take a while to load.\n",
+       "                    requirejs.config({waitSeconds: 0});\n",
+       "                }\n",
+       "\n",
+       "                require(['//dato.com/files/canvas/1.8.5/js/ipython_app.js'], function(IPythonApp){\n",
+       "                    var app = new IPythonApp();\n",
+       "                    app.attachView('sgraph','View', {\"edges_labels\": [\"yes\", \"no\", \"yes\", \"no\", \"no\", \"yes\"], \"selected_variable\": {\"name\": [\"<SGraph>\"], \"view_file\": \"sgraph\", \"view_component\": \"View\", \"view_params\": {\"elabel_hover\": false, \"vertex_positions\": null, \"h_offset\": 0.0, \"node_size\": 300, \"ecolor\": [0.37, 0.33, 0.33], \"elabel\": \"value\", \"arrows\": true, \"ewidth\": 1, \"vlabel\": \"__repr__\", \"highlight_color\": [0.69, 0.0, 0.498], \"vcolor\": [0.522, 0.741, 0.0], \"vlabel_hover\": false, \"highlight\": {\"0\": [0.69, 0.0, 0.48], \"3\": [0.039, 0.55, 0.77], \"4\": [1.0, 0.33, 0.0], \"5\": [1.0, 0.33, 0.0], \"6\": [0.039, 0.55, 0.77]}, \"v_offset\": 0.03}, \"view_components\": [\"View\"], \"type\": \"SGraph\", \"descriptives_links\": {\"edges\": \"edges\", \"vertices\": \"vertices\"}, \"descriptives\": {\"edges\": 6, \"vertices\": 7}}, \"positions\": null, \"error_type\": 0, \"vertices\": [5, 0, 2, 6, 3, 1, 4], \"vertices_labels\": [\"0.3223\", \"grade=A\", \"total_rec_late_fee<14.83015\", \"-0.273469\", \"-0.111044\", \"grade=B\", \"0.097203\"], \"edges\": [[0, 2], [0, 1], [2, 5], [2, 6], [1, 3], [1, 4]], \"ipython\": true, \"error_msg\": \"\"}, e);\n",
+       "                });\n",
+       "            })();\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "small_model.show(view=\"Tree\")"
    ]
@@ -1370,17 +1437,34 @@
     "\n",
     "**Quiz Question:** Based on the visualized tree, what prediction would you make for this data point?\n",
     "\n",
+    "**Answer:** -1\n",
+    "\n",
     "Now, let's verify your prediction by examining the prediction made using GraphLab Create.  Use the `.predict` function on `small_model`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype: int\n",
+       "Rows: 4\n",
+       "[1, -1, -1, 1]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "small_model.predict(sample_validation_data)"
+   ]
   },
   {
    "cell_type": "markdown",
